@@ -46,14 +46,18 @@ is for making priors more informative, and anhancing convergence.
 See Details and Examples.
 }
   \item{updatefun}{
-A function to use for updating \code{data[[update]]}. It should take an 'mcmc.list' object as argument.
+A function to use for updating \code{data[[update]]}. It should take an 'mcmc.list' object as 1st argument,
+2nd argument can be the number of clones.
 See Details and Examples.
 }
   \item{initsfun}{
 A function to use for generating initial values, \code{inits} are updated by the object
 returned by this function from the second iteration. If initial values
 are not dependent on the previous iteration, this should be \code{NULL}, otherwise,
-it should take an 'mcmc.list' object as argument. See Examples.
+it should take an 'mcmc.list' object as 1st argument, 2nd argument can be the
+number of clones. This feature is useful if latent nodes are provided in \code{inits}
+so it also requires to be cloned for subsequent iterations.
+See Details and Examples.
 }
   \item{flavour}{
   If \code{"jags"}, the function \code{\link{jags.fit}} is called. If \code{"bugs"}, the function \code{\link{bugs.fit}} is called.
@@ -106,20 +110,27 @@ Y <- rpois(n, exp(linpred))
 jfun1 <- function() {
     for (i in 1:n) {
         Y[i] ~ dpois(lambda[i])
-        log(lambda[i]) <- alpha[i] + inprod(X[i,], beta[1,])
+        log(lambda[i]) <- alpha[i] + inprod(X[i,], beta)
         alpha[i] ~ dnorm(0, 1/sigma^2)
     }
     for (j in 1:np) {
-        beta[1,j] ~ dnorm(0, 0.001)
+        beta[j] ~ dnorm(0, 0.001)
     }
     sigma ~ dlnorm(0, 0.001)
 }
 ## data
 jdata <- list(n = n, Y = Y, X = X, np = NCOL(X))
-## number of clones to be used, etc.
+## inits with latent variable and parameters
+ini <- list(alpha=rep(0,n), beta=rep(0, NCOL(X)))
+## function to update inits
+ifun <- function(model, n.clones) {
+    list(alpha=dclone(rep(0,n), n.clones),
+        beta=coef(model)[-length(coef(model))])
+}
 ## iteartive fitting
-jmod <- dc.fit(jdata, c("beta", "sigma"), jfun1, 
-    n.clones = 1:5, multiply = "n", unchanged = "np")
+jmod <- dc.fit(jdata, c("beta", "sigma"), jfun1, ini,
+    n.clones = 1:5, multiply = "n", unchanged = "np",
+    initsfun=ifun)
 ## summary with DC SE and R hat
 summary(jmod)
 dct <- dctable(jmod)
